real-project-01/bookinfo/gateway-domain/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-shared
  namespace: istio-system
spec:
  parentRefs:
  - name: shared-gateway
    namespace: default
    sectionName: http-grafana
  - name: shared-gateway
    namespace: default
    sectionName: https-grafana
  hostnames:
  - "grafana.hoangguruu.site"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: grafana
      port: 3000
