real-project-01/bookinfo/gateway-domain/vault-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-shared
  namespace: istio-system
spec:
  parentRefs:
  - name: shared-gateway
    namespace: default
    sectionName: http-vault
  - name: shared-gateway
    namespace: default
    sectionName: https-vault
  hostnames:
  - "vault.hoangguruu.site"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: vault-ui
      port: 8200
